--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/brownbook.png">
+  <meta name="description" content="Learn to think big, develop ideas, and apply your knowledge">
+  <meta name="author" content="862422675">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Melanie Borrayo - Philosophy</title>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Melanie Borrayo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/melanieborrayo.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
-        </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <h1 class="mb-3">Melanie Borrayo
+        </h1>Ethicist
+        <div class="subheading mb-5">Philosophy</div>
+        <p class="lead mb-4">Studying the teachings of philosophy has been the focus of my professional career thus far. My intention is to become well versed in all that the world of ethics and wisdom has to offer, for philosophy encompasses the love of wisdom. The most personal practice I have applied to my life regarding philosophy is the art of thinking. All aspects of life require philosophical skills which I why I have made it a goal to use them in every situation. Throughout the first year of my college career, I have applied critical thinking and efficient problem solving to all courses I engage with. I have since taken a course in contemporary moral issues to learn about the matters impacting our society today. Taking the course allowed me gain experience in analyzing the complexity of modern problems and understanding approach the solutions available. In the process, I began to understand that most times, in philosophy, there is no one way of coming to a conclusions about the best approach for ethical issues, everything is open to interpretation. <br><br>
 
-        Enter bio here<br><br>
+        Currently, the world of philosophy has taken over my career, and I have invested time into learning all the ways in which I can apply the teachings of ethics into every opportunity. I have used the skills of philosophy to accomplish all writing prompts I am presented with and I continue to practice the ideas of philosophy on my own. For every analysis of data, literature, or instruction, it is important to use the knowledge acquired through experience. I have previously been involved with gathering groups of people and hosting gatherings to extend the use of philosophical practices. Such occurrences have defined my experience with philosophy and have led me to grow more refined understanding of the professional world. Thus, I have used my abilities to concentrate on creating atmospheres with depth for individuals to find community in. <br><br>
 
-        Enter bio here
+        Overall, my professional career has grown to cater to the application of knowledge and wisdom in every situation. I understand that it is important to follow the teachings of philosophy closely and all my experiences in education closely reflect that. I have worked to improve my ability to apply critical thinking and problem solving skills to all aspects of life and I intend to continue understanding life from an ethical point of view. So far, I believe I have developed the ability to produce ethical ideas and apply them to all sorts of encounters. My capacity to complete work and engage in philosophy has been secured through the experiences I have encountered and continue to seek. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.netflix.com/login">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/melanieborrayo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.nytimes.com/games/wordle/index.html">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.dictionary.com/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -88,16 +88,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Experience</h2></h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.varsitytutors.com/en/tutoring-national?ad_test=Modifier_Tutoring&geoid=9031104&vtsubject=&vtm=Root&vtt=Tutor&network=g&matchtype=e&keyword=tutoring&creative=661625993451&device=c&devicemodel=&placement=&position=&capaignid=20055370267&adgroupid=153464254240&loc_physical_ms=9031104&loc_interest_ms=&keywordId=kwd-12616056&zip=&accountid={123-208-7597}&gad_source=1&gclid=CjwKCAjwrvyxBhAbEiwAEg_KgnD5LsbuYzp1IhPlVsbSNOlpBBK3i6ouU_UTVFaIPfnFwUoN99E8LhoCgvMQAvD_BwE">Tutoring</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Tutored for children of all ages<br> 
+              • Worked to aid students in learning all subjects <br>
+              • Developed studying and teaching techniques<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,33 +107,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Secretary</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://arcadiastage.com">Arcadia Stage</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for completing company forms<br>
+              • Attendee to all company meetings and recorder of meeting minutes<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2022 - June 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://amigosdelosrios.org/rio-hondo-river-trail/">Amigos De Los Rios</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Planted new material<br>
+            • Worked to eliminate invasive species on property<br>
+            • Helped grow plants to green the trail<br>
+            • Worked with others to water the existing plants<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2022 - June 2023</span>
           </div>
         </div>
 
@@ -152,33 +152,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Philosophy</div>
+            <div>BA in Philosophy</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
 
@@ -191,7 +169,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/arcadia.jpg" width="500px">
+            <img src="img/stage.jpg" width="500px"><br>
+            <img src="img/rio.jpg" width="500px">
+            <img src="img/hondo.jpg" width="500px"><br>
+
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Melanie Borrayo</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
